update halaman website

--- a/Smartgarbage-Website/about.html
+++ b/Smartgarbage-Website/about.html
@@ -41,7 +41,7 @@
                 <div class="container">
                     <div class="content"></div>
                         <table>
-                            <caption>Profil Alat</caption>
+                            <caption>Profil</caption>
                             <tr>
                                 <th>Tentang</th>
                             </tr>
@@ -61,7 +61,13 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>Developer</th>
+                                <th>Cara Kerja Alat</th>
+                            </tr>
+                            <tr>
+                                <td><a href="https://drive.google.com/drive/folders/1oFpCJRmktc6FtqO5bZhkqf0GBtciI4Ft?usp=sharing">click here</a></td> 
+                            </tr>
+                            <tr>
+                                <th>Perancang</th>
                             </tr>
                             <tr>
                                 <td>Fauji Feriyaman, Fieril Nur Arham, Ikrar Khaera Arfat, Lintang Hannan Maulana</td>
